<resources>
    <string name="app_name">CodeReader</string>
    <string name="btn_save">保存</string>
    <string name="btn_commit">同步到GitHub</string>
    <string name="btn_delete">删除</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">设置</string>
    <string name="tv_search">搜索:</string>
    <string name="btn_next">下一个</string>
    <string name="set_GitHub">设置GitHub账号信息</string>
    <string name="account">账号:</string>
    <string name="password">密码:</string>
    <string name="repositories">仓库名称:</string>
    <string name="test_git">测试Git</string>
    <string name="sure">确认</string>
    <string name="load_file">载入文件</string>
    <string name="directory">目录:</string>
    <string name="browse">浏览</string>
    <string name="cancel">取消</string>
    <string name="back">后退</string>
    <string name="select_this_file">选择该文件</string>
</resources>
