<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width="0dp"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_weight="2"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/back"/>
            <Button
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/setting"/>
        </LinearLayout>
        <fragment
            android:id="@+id/fm_items_tree"
            android:name="tech.coordinates.codereader.fragment.TreeFragment"
            android:layout_width="match_parent"
            android:layout_weight="7"
            android:layout_height="0dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal"
            android:layout_weight="0.65">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent"
                android:text="@string/tv_search"
                android:gravity="center_vertical|center_horizontal"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="@string/btn_next"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_weight="4">
            <fragment
                android:id="@+id/fm_file_content"
                android:name="tech.coordinates.codereader.fragment.ContentFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="0.8">
                <Button
                    android:id="@+id/btn_delete"
                    android:padding="5dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/btn_delete_red"
                    android:text="@string/btn_delete"/>
                <Button
                    android:id="@+id/btn_commit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:text="@string/btn_commit"/>

                <Button
                    android:background="@color/blue"
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_save"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>